--- a/Week-4/web/home.html
+++ b/Week-4/web/home.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="home.css">
+    </head>
 <body>
     <h1>Clive's best furnished lounge</h1>
     <h2>Available houses displayed</h2>
@@ -10,5 +14,5 @@
     <h6>The price ranges from 35M-50M varying with the different interior designs</h6>
     <button>Contact: me</button>
 
-</body>
+    </body>
 </html>
