--- a/Week-4/web/spotify_clone.html
+++ b/Week-4/web/spotify_clone.html
@@ -1,5 +1,5 @@
 <h1>𝗦𝗣𝗢𝗧𝗜𝗙𝗬</h1>
-
+<html>
     <img src="assets/dababy.jfif"
         width="200" 
         height="200" />
@@ -15,7 +15,9 @@
     <p>
     <video width="500" height = "500" controls>
         <source src ="assets/dababy_blind_feat_young_thug_official_audio_mp3_73520.mp3"
-        type ="video/mp4"> 
+        type ="video/mp"> 
         
     </video>
     </p>
+ </body>
+ </html>
